# aiml-fw-athp-pipeline-components

./: .gitreview  INFO.yaml  README.md  groups  project.config
components/: Makefile
components/feature_extraction/: pyproject.toml
components/feature_extraction/feature_extraction/: Dockerfile  feature_extraction_component.py
components/metrics_store/: pyproject.toml
components/metrics_store/metrics_store/: Dockerfile  metrics_store_component.py
components/model_storage/: pyproject.toml
components/model_storage/model_storage/: Dockerfile  logger.py  model_storage_component.py
components/model_training/: pyproject.toml
components/model_training/model_training/: Dockerfile  model_training_component.py
components/model_training/model_training/model_type/: base_model.py  lstm_model.py  model_factory.py
docs/: aimlfw_setup.md  conf.py  conf.yaml  index.rst  overview.rst  release-notes.rst  user-guide.rst
pipeline/: pipeline.py
