[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "model_storage"

authors = [
    {name = "Subhash Kumar Singh", email = "subh.singh@samsung.com"}
]
description = "component for model storage"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
]

[tool.setuptools.packages.find]
where = ["."]
